--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui,shrink-to-fit=no">
-            <title>Darmowy pasjans online / Free online solitaire</title>
-                <meta name="description" content="Darmowy Pasjans/Solitaire online. Jeśli lubisz gry karciane to ta strona jest dla Ciebie! Zmierz swoje umiejętności w układaniu pasjansów na czas.">
+            <title>Pasjans</title>
+                <meta name="description" content="Pasjans">
             <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -20,7 +20,7 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="theme-color" content="#905430">
         <meta property="og:site_name" content="Pasjans/Solitaire">
-            <meta property="og:title" content="Darmowy pasjans online / Free online solitaire">
+            <meta property="og:title" content="Pasjans">
             <meta property="og:url" content="https://pasjans-online.pl/">
         <meta property="og:title" content="Darmowy pasjans online / Free online solitaire">
         <meta property="og:image" content="https://pasjans-online.pl/images/icons/icon_128.png">
