--- a/Ruda.html
+++ b/Ruda.html
@@ -48,7 +48,7 @@
 
 <div class="container">
     <h1>Wyjazd Na Rudę</h1>
-    <form action="/submit-reservation" method="post">
+    <form action="https://formspree.io/f/xldrjwvo" method="post">
         <label for="name">Imię i Nazwisko:</label>
         <input type="text" id="name" name="name" required>
 
