--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
 <div class="container">
-    <h1>Wyjazd Na Rudę</h1>
+    <h1>Wyjazd Na Rudę Rybnik</h1>
     <form action="https://formspree.io/f/xldrjwvo" method="post">
         <label for="name">Imię i Nazwisko:</label>
         <input type="text" id="name" name="name" required>
@@ -66,7 +66,7 @@
 
         <label for="message">Dodatkowe Uwagi:</label>
         <textarea id="message" name="message" rows="4"></textarea>
-
+        <checkbox>Potwierdzam, że jestem kolegą Kamila M. z Radlina.</checkbox>
         <button type="submit">Zarezerwuj</button>
     </form>
 </div>
