--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
         <label for="message">Dodatkowe Uwagi:</label>
         <textarea id="message" name="message" rows="4"></textarea>
-        <checkbox>Potwierdzam, że jestem kolegą Kamila M. z Radlina.</checkbox>
+        <input type="checkbox" id="chk" name="chk" value="KM">
+        <label for="chk"> Jestem kolegą Kamila M. z Radlina</label>
         <button type="submit">Zarezerwuj</button>
     </form>
 </div>
