--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 
         <label for="message">Dodatkowe Uwagi:</label>
         <textarea id="message" name="message" rows="4"></textarea>
-        <input type="checkbox" id="chk" name="chk" value="KM">
-        <label for="chk"> Jestem kolegą Kamila M. z Radlina</label>
+        <p>*Musisz być kolegą Kamila M. z Radlina</p>
         <button type="submit">Zarezerwuj</button>
     </form>
 </div>
