--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <input type="tel" id="phone" name="phone" required>
 
         <label for="date">Data Rezerwacji:</label>
-        <input type="date" id="date" name="date" required max="2024-08-31">
+        <input type="date" id="date" name="date" required min="2025-07-01" required max="2025-08-31">
 
         <label for="time">Godzina Rezerwacji:</label>
         <input type="time" id="time" name="time" value="09:00" required>
